objects/PegaPE__Pega_Gadget_Configuration__c.object
<CustomObject>
    <description>Configuration settings that are required in order to display a Pega Application in a Force.com TAB</description>
    <fields>
        <fullName>PegaPE__Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pega SFDC SSO Division</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__Organization__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pega SFDC SSO Org</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PRPC_Version__c</fullName>
        <description>The Pega Extender uses an application framework that is specific to the version of Pega PRPC server that is accessed. Please select your version of the Pega PRPC server.</description>
        <inlineHelpText>Please select your version of the Pega PRPC server.</inlineHelpText>
        <label>PRPC Version</label>
        <picklist>
            <picklistValues>
                <fullName>PRPC 7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.3 SP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.2 SP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.2 SP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.1 SP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.1 SP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRPC 6.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA__c</fullName>
        <description>Pega Gadget Attributes: The action to perform in the selected Gadget</description>
        <inlineHelpText>Select the appropriate action the Gadget Manager executes when it loads the gadget, that is, the default or main action.</inlineHelpText>
        <label>Pega Action</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Work By Url</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_className__c</fullName>
        <description>Pega Gadget Attributes: The class that the action option applies to if the selected Pega Gadget Action is display, createNewWork, or getNextWork</description>
        <inlineHelpText>If the Pega Gadget Action is display, createNewWork, or getNextWork, specify the class that is applicable for the specified flow or harness</inlineHelpText>
        <label>Pega Action Class Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_flowName__c</fullName>
        <label>Pega Action Flow Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_harnessName__c</fullName>
        <description>Pega Gadget Attributes: The name of the appropriate harness if the Pega Action is display</description>
        <inlineHelpText>When the action is display, select the name of a harness rule.</inlineHelpText>
        <label>Pega Harness Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_pyReportClass__c</fullName>
        <description>PegaA_pyReportClass is to be provided when a Report Definition Harness is to be called using PegaA_query=&quot;?pyActivity=Rule-Obj-Report-Definition.pxShowReport&quot;</description>
        <inlineHelpText>PegaA_pyReportClass is to be provided when a Report Definition Harness is to be called using PegaA_query=&quot;?pyActivity=Rule-Obj-Report-Definition.pxShowReport&quot;</inlineHelpText>
        <label>Pega Action Report Class Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_pyReportName__c</fullName>
        <description>Report Definition Name which needs to be displayed</description>
        <inlineHelpText>Report Definition Name which needs to be displayed E.g. MyWeeklyReport</inlineHelpText>
        <label>Pega Action Report Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_query__c</fullName>
        <description>Pega Gadget Attributes: The name of the PegaGadget - NOTE: Not included in the IAC Gadget Manager Reference documentation</description>
        <inlineHelpText>Enter the appropriate Pega Action Query E.g. ?pyActivity=Rule-Obj-Report-Definition.pxShowReport to call a Report Definition</inlineHelpText>
        <label>Pega Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaA_readOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pega Gadget Attributes: Read Only</description>
        <inlineHelpText>Select to make this Pega Gadget is Read Only</inlineHelpText>
        <label>Pega Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaDefer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the default action specified (PegaA=&quot;getNextWork&quot;, for example) occurs when the Gadget Manager first loads the page or whether the action should wait until it is invoked through a doaction by the page JavaScript or a gadget action in another gadget. Values: true, false</description>
        <inlineHelpText>Select to defer loading of the Application page. This will require that the page load be initiated with a Javascript function instead of application page load</inlineHelpText>
        <label>Pega Action Defer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaGadget__c</fullName>
        <description>Pega Gadget Attributes: The name of the PegaGadget</description>
        <inlineHelpText>Select the appropriate Pega Gadget to display</inlineHelpText>
        <label>Pega Gadget Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadget 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadget 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadget 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadget 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadget 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>samplepegagacasegadget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaResize__c</fullName>
        <description>Pega Gadget Attributes: The resize option setting</description>
        <inlineHelpText>Select the appropriate window resize option</inlineHelpText>
        <label>Pega Resize Option</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaTarget__c</fullName>
        <description>Pega Gadget Attributes: The location of the window that the Pega Gadget is displayed in</description>
        <inlineHelpText>Select the Pega Gadget Window location option</inlineHelpText>
        <label>Pega Window Target Option</label>
        <picklist>
            <picklistValues>
                <fullName>_self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_popup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__PegaThread__c</fullName>
        <label>Pega Thread</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pega SFDC SSO Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__appName__c</fullName>
        <description>Pega Configuration Object Attribute. Maps directly to the Pega IAC &quot;pega.web.config.appName&quot; parameter.</description>
        <inlineHelpText>Select the appropriate application to display</inlineHelpText>
        <label>Application Name</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCMFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pega Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UservInsuranceProducts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomReportApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomProcessApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Fulfillment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__encrypt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pega Configuration Object Attribute. Maps directly to the Pega IAC &quot;pega.web.config.encrypt&quot; parameter.</description>
        <inlineHelpText>Select to encrypt browser communications</inlineHelpText>
        <label>Encrypt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PegaPE__gatewayUrl__c</fullName>
        <description>Pega Configuration Object Attribute. Maps directly to the Pega IAC &quot;pega.web.config.gatewayUrl&quot; parameter.</description>
        <inlineHelpText>Select the appropriate Gateway URL based on whether you are an Internal, External or External Through Gateway user.</inlineHelpText>
        <label>Gateway URL</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Way URL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Way URL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Way URL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Way URL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Way URL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>https://www.google.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__style__c</fullName>
        <description>Pega Gadget Attributes: Standard CSS display markup for the Gadget Window</description>
        <inlineHelpText>Enter appropriate stylistic CSS markup to control the Pega Gadget display</inlineHelpText>
        <label>Style CSS Markup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PegaPE__systemID__c</fullName>
        <description>Pega Configuration Object Attribute. Maps directly to the Pega IAC &quot;pega.web.config.systemID&quot; parameter.</description>
        <inlineHelpText>Select the appropriate Sytem ID</inlineHelpText>
        <label>System ID</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PegaPE__thread__c</fullName>
        <description>Pega Configuration Object Attribute. Maps directly to the Pega IAC &quot;pega.web.config.thread&quot; parameter.</description>
        <inlineHelpText>Select the appropriate Thread model</inlineHelpText>
        <label>Thread</label>
        <picklist>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thread 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thread 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thread 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thread 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thread 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pega Gadget Configuration</label>
    <listViews>
        <fullName>PegaPE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pega Gadget Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>